--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
-  cached_network_image: "0.3.0"
+  cached_network_image: "^0.3.0"
+  shared_preferences: "^0.3.1"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+transformers:
+  - dartson    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
